--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,7 +10,4 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: Npm@1
-  inputs:
-    command: 'ci'
-    workingDir: '$(Build.SourcesDirectory)/devsecops-demo/'
+- script: echo '$(Build.SourcesDirectory)/devsecops-demo/'
