Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,4 +10,8 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- script: echo '$(Build.SourcesDirectory)/devsecops-demo/'
+- task: Docker@2
+  inputs:
+    command: 'build'
+    Dockerfile: '**/Dockerfile'
+
