--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,6 +10,10 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
+- task: Npm@1
+  inputs:
+    command: 'ci'
+    workingDir: '**/devsecops-demo'
 - task: Docker@2
   inputs:
     containerRegistry: 'devsecops'
@@ -18,4 +22,5 @@ steps:
     Dockerfile: '**/Dockerfile'
     addPipelineData: false
     addBaseImageData: false
+
 
