--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,7 +13,7 @@ steps:
 - task: Npm@1
   inputs:
     command: 'ci'
-    workingDir: 'devsecops-demo'
+    workingDir: 'devsecops-demo/'
 - task: Docker@2
   inputs:
     containerRegistry: 'devsecops'
