--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,17 +10,9 @@ pool:
   vmImage: ubuntu-latest
 
 steps:
-- task: Npm@1
-  inputs:
-    command: 'ci'
-    workingDir: 'devsecops-demo/'
-- task: Docker@2
-  inputs:
-    containerRegistry: 'devsecops'
-    repository: 'alivelusai/tictactoe'
-    command: 'buildAndPush'
-    Dockerfile: '**/Dockerfile'
-    addPipelineData: false
-    addBaseImageData: false
+- script: |
+              echo "Building on  $(Build.SourcesDirectory/devsecops-demo)"
+    
+
 
 
