--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
 
 steps:
 - script: |
-              echo "Building on  $(Build.SourcesDirectory"
+              echo "Building on  $(Build.SourcesDirectory)"
     
 
 
