--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,6 +12,11 @@ pool:
 steps:
 - script: |
               echo "Building on  $(Build.SourcesDirectory)"
+- script: |
+    echo "📁 Current directory: $(Build.SourcesDirectory)"
+    ls -R $(Build.SourcesDirectory)
+  displayName: 'List project files'
+
     
 
 
