--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,21 +1,40 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
-
 trigger:
 - main
 
 pool:
-  vmImage: ubuntu-latest
+  vmImage: 'ubuntu-latest'
+
+variables:
+  REGISTRY: 'alivelusai/tictactoe'
+  NEW_IMAGE: 'alivelusai/tictactoe:app-$(Build.BuildId)'
 
 steps:
-- task: Npm@1
+- checkout: self
+  persistCredentials: true   # ✅ Needed to push back to the repo
+
+- task: Docker@2
+  displayName: 'Build and Push Docker Image'
   inputs:
-    command: 'ci'
-    workingDir: '$(Build.SourcesDirectory)'
+    containerRegistry: 'devsecops'
+    repository: 'alivelusai/tictactoe'
+    command: 'buildAndPush'
+    Dockerfile: '$(Build.SourcesDirectory)/Dockerfile'     # ✅ Make sure the path is correct
+    buildContext: '$(Build.SourcesDirectory)'
+    tags: |
+      app-$(Build.BuildId)
+    addPipelineData: false
+    addBaseImageData: false
 
-    
+- script: |
+    echo "Updating image in deployment.yaml..."
+    sed -i "s|image: .*|image: $(NEW_IMAGE)|g" kubernetes/deployment.yaml
+  displayName: 'Update Kubernetes Deployment Manifest'
 
-
-
+- script: |
+    git config user.email "alivelusainikhil@gmail.com"
+    git config user.name "alivelusai"
+    git add kubernetes/deployment.yaml
+    git commit -m "Update Kubernetes deployment with new image tag"
+    git push origin HEAD:main
+  displayName: 'Commit Updated Manifest to Repo'
+  condition: succeeded()
