Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -33,11 +33,15 @@ steps:
 - script: |
     git config user.email "alivelusainikhil@gmail.com"
     git config user.name "alivelusai"
-    git fetch origin
-    git checkout main
-    git pull origin main --rebase   # <-- Pull latest main to avoid fast-forward issues
+   
+    git fetch origin main
+    git checkout -b main origin/main
+
+    echo "Updating image in deployment.yaml..."
+    sed -i "s|image: .*|image: $(NEW_IMAGE)|g" kubernetes/deployment.yaml
 
     git add kubernetes/deployment.yaml
     git commit -m "Update Kubernetes deployment with new image tag" || echo "No changes to commit"
+
     git push origin main
-  displayName: 'Commit Updated Manifest to Repo'
+  displayName: 'Update & Push Kubernetes Manifest'
