--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -34,14 +34,18 @@ steps:
     git config user.email "alivelusainikhil@gmail.com"
     git config user.name "alivelusai"
    
+    # Fetch and checkout main correctly
     git fetch origin main
-    git checkout -b main origin/main
+    git checkout -B main origin/main
 
     echo "Updating image in deployment.yaml..."
     sed -i "s|image: .*|image: $(NEW_IMAGE)|g" kubernetes/deployment.yaml
 
     git add kubernetes/deployment.yaml
     git commit -m "Update Kubernetes deployment with new image tag" || echo "No changes to commit"
+
+    # Rebase or pull to get remote updates
+    git pull --rebase origin main
 
     git push origin main
   displayName: 'Update & Push Kubernetes Manifest'
