--- a/kubernetes/flux-system/kustomization.yaml
+++ b/kubernetes/flux-system/kustomization.yaml
@@ -3,4 +3,5 @@ kind: Kustomization
 resources:
 - gotk-components.yaml
 - gotk-sync.yaml
-targetNamespace: default
+spec:
+ targetNamespace: default
